# doc-building-blocks

./: .gitignore  LICENSE  makefile  readme.md
2019xcor/: abstract.tex  dsp.tex  dtft.tex  estHx.tex  expectation.tex  intro.tex  makefile  normalg.tex  randseq.tex  xcordef.tex
2019xcor/graphics/: makefile
2019xcordef/: abstract.tex  case_operator_mnoise.tex  dsp.tex  evaluation.tex  expectation.tex  intro.tex  makefile  randseq.tex  shell_sysHz_xy.tex  xcor_xyreal.tex
2019xcordef/JACM/: NTMSCI_TEMPLATE.tex  bibliography.tex  case_addnoise.tex  case_dual_mnoise.tex  case_estHx.tex  case_operator_mnoise.tex  case_studies.tex  case_systemid_nonlinear.tex  dsp.tex  expectation.tex  formatting.sty  intro.tex  main.bbl  main.tex  makezip.bat  normalg.tex  packages.sty  randseq.tex  references.bib  symbols.sty  theorems.sty  xcordef.tex
2019xcordef/graphics/: makefile  shell_opH_mnoise.tex  shell_opT_estH_mnoise.tex  shell_sysT_xyup.tex  shell_sysT_xyvq.tex  shelltop.tex
R/: cagefree.R  eggs.R  plantGrowth.R  sigmoid.R  sunspots.R  test.R
R/tex/: sunspots_eigen.dat_1
abcbodc/: intro.tex
abcdc/: awgn.tex  cdma.tex  comsys.tex  dcsd.sty  em.tex  equalize.tex  est_p.tex  front.tex  isi.tex  linearop.tex  makefile  mathtbls.tex  mod_sin.tex  mpath.tex  ref.tex  struct.tex  symbols.tex
abcdc/tools/: bspline.m  d4.m  gen_dn.m  nsphere.plt  pdf_norm.m  pz.m  rproc3d.m  sinc.plt  sinc_ab.plt  sinc_sq.plt  sinc_sqt.plt  sincn.m
abcdsp/: front.tex  frontcover.tex  frontcoverA4.tex  makefile  mathtbls.tex  src_code.tex
abcdsp/graphics/: makefile  shell_123le12.tex  shell_D12_pz.tex  shell_D16_pz.tex  shell_D2_pz.tex  shell_D8_pz.tex  shell_Fhw.tex  shell_Fpulse.tex  shell_Ftent012.tex  shell_IntTrap.tex  shell_S14_pz.tex  shell_S16_pz.tex  shell_S17_pz.tex  shell_S8_pz.tex  shell_S9_pz.tex  shell_b3_g.tex  shell_b4_g.tex  shell_baslat_cosh.tex  shell_baslat_d2.tex  shell_baslat_h3.tex  shell_bspline_pz.tex  shell_ccby40.tex  shell_cencubs.tex  shell_cendiff.tex  shell_d10_phi_h.tex  shell_d10_psi_g.tex  shell_d11_psi_g.tex  shell_d12_phi_h.tex  shell_d1_g.tex  shell_d1_h.tex  shell_d2_psi_g.tex  shell_d4_phi_h.tex  shell_d4_psi_g.tex  shell_d5_psi_g.tex  shell_d6_phi_h.tex  shell_d7_psi_g.tex  shell_d9_psi_g.tex  shell_dfII_order1_abc.tex  shell_dfI_order1_lpf2pi3.tex  shell_dfI_order2_156.tex  (+144 more)
abcssp/: makefile  shelltop.tex  srccode.tex
abcssp/analysis/: app_analysis.tex  metric.tex  mpf.tex  sums.tex  topology.tex
abcssp/basis/: app_basis.tex  basisintro.tex  basisintro_eps.tex  frames.tex
abcssp/covers/: covers.tex  coverst.tex
abcssp/front/: abstract.tex  ackno.tex  front.tex  frontcover.tex  preface.tex  quotepagepair.tex  symbols.tex  typesetting.tex
abcssp/intro/: chp_intro.tex  dft.tex  fieldops.tex  filter.tex  graph.tex  lattice.tex  ocsseq.tex  order.tex  overview.tex  probability.tex  relations.tex  sequences.tex  sets.tex  stats.tex
abcssp/larc/: chp_larc.tex  interpo.tex  intro.tex  larc.tex  linspace.tex
abcssp/pds/: chp_pds.tex  distance.tex  intro.tex  ptspace.tex
abcssp/ssp/: chp_ssp.tex  ocsseq.tex  sspdft.tex  ssphp.tex  ssplp.tex  sspwave.tex
abcssp/sto/: argmin.tex  chp_sto.tex  isomorphic.tex  makefile  ocs.tex  ocsop.tex  ocsrv.tex  oms.tex  sspmetrics.tex
abcstat/: Ustmry.fd  front.tex  main_old.tex  makefile  src_code.tex
abcstat/.claude/: settings.local.json
abcstat/graphics/: makefile  shell_D4_pz.tex  shell_S4_pz.tex  shell_b0_g.tex  shell_b1_g.tex  shell_b2_g.tex  shell_butterfly_bndA.tex  shell_butterfly_clsA.tex  shell_butterfly_drvA.tex  shell_butterfly_intA.tex  shell_butterfly_setA.tex  shell_cagefree-ratios.tex  shell_cont_ydy.tex  shell_cont_yfy.tex  shell_cont_yx.tex  shell_coscos11.tex  shell_d1_psi_g.tex  shell_dfI_order1_abc.tex  shell_dji30_20171006-20181004.tex  shell_dual_addnoise.tex  shell_earthquake_kapi_20180928.tex  shell_egg-production.tex  (+142 more)
bayesnets/: backmat.tex  front.tex  src_code.tex
common/: RandSeq_CaseStudies.tex  algebra.tex  analyses.tex  archive.tex  argmin.tex  backmat.tex  backmata.tex  backmatp.tex  backmatr.tex  bayesnets.tex  binomial.tex  boolean.tex  bwav.tex  calculus.tex  cdma.tex  cinput.tex  circ128.inc  circle.inp  coherence.tex  com_channel.tex  convex.tex  convolution.tex  correlation_estimation.tex  d  dan_sav.sty  delta.tex  density_estimation.tex  dimensionality_reduction.tex  distance.tex  distorted_frequency.tex  dsp.tex  dspcalculus.tex  dtft.tex  ec  em.tex  estimate.tex  estimate_phase.tex  expectation.tex  filtertop.tex  found.blg  (+168 more)
data/: II.KAPI.10.BH1.M.2018-09-28T100255.019538.csv  silso_SN_m_tot_V2.0_20210524.csv  sunspots_silso_20210522.csv
dsp/: front.tex  main.tex  mainx.blg  mainx.ilg  mainx.toc  makefile  src_code.tex  xref.ilg  xsym.ilg
dspp/: covers.tex  dspcalculus.tex  filtering.tex  mainx.blg  mainx.ilg  mainx.tex  mainx.toc  mainx.xdv  makefile  sampling.tex  srccode.tex  synbio.tex  xref.ilg  xsym.ilg  zcalc1.tex  zcalc2.tex  zcalc2p.tex  zchar.tex  zfilters.tex  ztricks.tex
graphmath/: category.tex  front.tex  gm_order.tex  makefile
image/: test.m
msdnil/: abstract.tex  front.tex
paip2019/: PAIP19Challenge_ConsentForm_20191017.tex  doc_data.txt
posts/: ZA2115.tex  math-4015842_IFT-etau.tex  math-4015842_IFT-etau2.tex  math-4015842_IFT-etau3.tex  math-4023679_dirac.tex  math-4055512_laplace.tex  math-stackexchange-291455_Skewness.tex  math-stackexchange-374881_recursive-formula-for-variance.tex  math-stackexchange-3939703_sigmoid1.tex  math-stackexchange-3939703_sigmoid2.txt  math-stackexchange-3990086_plantGrowth_comment.tex  math-stackexchange-3990086_plantGrowth_method1.txt  math-stackexchange-3990086_plantGrowth_method2.txt  math-stackexchange-3990086_plantGrowth_method3.tex  math-stackexchange-4739824_Euniform.tex  math-stackexchange-4891784_Haar.tex
sandbox/: tvs2700.tex
traffic_light/cpp/: CMakeLists.txt  build_gcc_gmake.bat  command.cpp  command.h  estimate_amplitude.cpp  estimate_amplitude.h  estimate_induction.cpp  help.cpp  help.h  induction.cpp  main.cpp  makefile  sequencer.cpp  sequencer.h
xnil/: front.tex
(+2862 files in other folders)
